feat: group highlight segments and delete by batch